# geoaiserve

./: .env.example  .gitignore  LICENSE  Makefile  README.md  frontend_plan.md  pyproject.toml  pytest.ini  real_model_testing_plan.md  restapi_plan.md  test_api.sh
.claude/: SETUP_SUMMARY.md
.claude/agents/: code-architecture-reviewer.md
.claude/hooks/: README.md  SETUP.md  skill-suggester.py  user-prompt-submit.sh
.claude/references/: fastapi-endpoint-patterns.md  geoai-models-api-reference.md
.claude/skills/: skill-rules.json
docs/: geoai_integration_plan.md
frontend/: index.html
geoaiserve/: __init__.py  config.py  main.py
geoaiserve/models/: __init__.py  base.py  dinov3_service.py  moondream_service.py  registry.py  sam_service.py
geoaiserve/routers/: __init__.py  common.py  dinov3.py  files.py  moondream.py  sam.py
geoaiserve/schemas/: __init__.py  common.py  dinov3.py  files.py  moondream.py  requests.py  responses.py  sam.py
geoaiserve/services/: __init__.py  file_handler.py
geoaiserve/utils/: __init__.py  geotiff_loader.py
problems/: README.md  problem1_testclient_lifespan.md  problem2_multipart_json_conflict.md
tests/: __init__.py  conftest.py  markers.py  test_common.py  test_dinov3.py  test_files.py  test_geotiff_loader.py  test_integration.py  test_moondream.py  test_real_dinov3.py  test_real_moondream.py  test_real_sam.py  test_sam.py
tests/data/: README.md
