[project]
name = "geoaiserve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "geopandas>=1.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "rasterio>=1.4.4",
    "shapely>=2.1.2",
    "uvicorn[standard]>=0.40.0",
]
