[project]
name = "geoaiserve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "rasterio>=1.4.4",
    "shapely>=2.1.2",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "segment-anything-py",
]

dev-ml = [
    {include-group = "dev"},
    {include-group = "ml"},
]

[tool.pytest.ini_options]
markers = [
    "mock: tests using mock models (default)",
    "real_model: tests requiring real ML models",
    "real_sam: SAM-specific real tests",
    "real_moondream: Moondream-specific real tests",
    "real_dinov3: DINOv3-specific real tests",
    "geotiff: tests using GeoTIFF files",
    "slow: long-running tests",
]
